--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,9 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --logo-in: #221e1b;
+  --logo-out: #e7d6c4
 }
 
 /* semantic color variables for this project */
