--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -28,7 +28,40 @@
   src: url("../fonts/aboreto-v2-latin-regular.woff2") format("woff2");
 }
 
+@font-face {
+  font-display: swap;
+  font-family: "Bender";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Bender.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Bender";
+  font-style: bold;
+  font-weight: 400;
+  src: url("../fonts/Bender-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/oswald-v57-latin-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/oswald-v57-latin-500.woff2") format("woff2");
+}
+
 @theme {
   --font-aboreto: "Aboreto", display;
+  --font-bender: "Bender", sans-serif;
+  --font-oswald: "Oswald", sans-serif;
+
   --white-sub: #aaaaaa;
 }
