--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3,11 +3,16 @@
 @import "tailwindcss/preflight" layer(base);
 @import "tailwindcss/utilities" layer(utilities);
 
+#app {
+  min-height: 100vh;
+}
+
 body {
   background: linear-gradient(90deg, #748a8f, #3a464b, #1c1f23);
   font-family: "Ubuntu", monospace;
   min-height: 100vh;
-  /* max-width: 100vw; */
+  margin: 0;
+  padding: 0;
 }
-@media screen and (min-width: 1024px) {
-}
+
+/* @media screen and (min-width: 1024px) {} */
